tests/file_test/testdata/unicode_as_identifier.llang
# what's the meaning of using unicode as identifier?

let 常量 = 42;
